Child-parent relationships arent kept after you make instances real #71199

Closed
opened 2019-10-29 17:26:36 +01:00 by Artem · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01

Blender Version
Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-10-28 21:19, hash: 2dab4393b0
Worked:

Short description of error
Blender doesn't keep child-parent properties with duplifaces (and other instances too i imagine) with "Keep hierarchy" checkmark enabled in "Make instances real" properties

Exact steps for others to reproduce the error
In the sample file, ctrl+a => make instances real with "Keep hierarchy" checkmark enabled, but parental relationships are not kept.
sample1.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01 **Blender Version** Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-10-28 21:19, hash: `2dab4393b0` Worked: **Short description of error** Blender doesn't keep child-parent properties with duplifaces (and other instances too i imagine) with "Keep hierarchy" checkmark enabled in "Make instances real" properties **Exact steps for others to reproduce the error** In the sample file, ctrl+a => make instances real with "Keep hierarchy" checkmark enabled, but parental relationships are not kept. [sample1.blend](https://archive.blender.org/developer/F7869702/sample1.blend)
Author

Added subscriber: @Hickz

Added subscriber: @Hickz
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...
(note we had #66282 which might be related...)

Can confirm, checking... (note we had #66282 which might be related...)
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

This is indeed caused by 699193713f.

@mont29: do you have time to investigate?

This is indeed caused by 699193713f. @mont29: do you have time to investigate?

This issue was referenced by e8cd2269b4

This issue was referenced by e8cd2269b40ddd21a10fd1f745ebc131c74ca9a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2019-11-08 14:30:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71199
No description provided.