Fix T71199: Child-parent relationships arent kept after you make instances real.

Comparison function of the of the parent ghash was not fully correct,
could lead to some false positives in some cases...